data/all_generated_tests/raw_wast_tests/call_indirect_UnreachableCodeExecution_4059.wast
;; 8. **Test Description**: Modify a table entry to be `null` or invalid and use `call_indirect` referencing that entry. The function is supposed to execute `unreachable` when null references are invoked.    - **Constraint Checked**: Integrity and validation of table entries, null references.    - **Unreachable Code Execution**: Ensures null/invalid references trap correctly, avoiding `unreachable`.

(assert_invalid
  (module
    (table 1 funcref)
    (type $sig (func (param i32) (result i32)))
    (func $f (result i32 i32)
      (call_indirect (type $sig) (i32.const 0))
    )
  )
  "type mismatch"
)